k8s/networkpolicies/allow-app-to-services.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-services 
  namespace: feathr
spec:
  podSelector:
    matchLabels:
      app: api 
  policyTypes:
    - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: mongo
    ports:
      - protocol: TCP
        port: 27017
  - to:
    - podSelector:
        matchLabels:
          app: elastic 
    ports:
      - protocol: TCP
        port: 9200
