k8s/networkpolicies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny 
  namespace: feathr
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
